# seguranca-auditoria

./: .gitignore  README.md
1VA/Atividade-3/: docker-compose.yaml  pyproject.toml
1VA/Atividade-3/BruteForce/: brute_force.py
1VA/Atividade-3/CSRF/: commands
1VA/Atividade-3/Command Injection/: commands
1VA/Atividade-3/File Inclusion/: commands
1VA/Atividade-3/File Upload/: commands
1VA/Atividade-3/SQL Injection/: commands.sql
1VA/Atividade-3/XSS (DOM)/: commands
1VA/Atividade-3/XSS (Stored)/: commands
1VA/Atividade-3/XSS Reflected/: commands
1VA/Atividade-4/: Comandos  fuzzy.py  fuzzy1.py  fuzzy2.py  fuzzy3.py  sender.py
1VA/Atividade-5/: iframe1.html  iframe2.html  index.html
1VA/Atividade-5/css/: style.css  styleframe.css
1VA/Atividade-5/js/: main.js
2VA/Atividade 1/: DOIT  docker-compose.yaml
2VA/Atividade 1/files/: nginx.conf  ngx_http_header_filter_module.c  sysctl.conf
2VA/Atividade-1/: DOIT  Dockerfile  commands  docker-compose.yaml
2VA/Atividade-1/files/: nginx.conf
2VA/Atividade-2/: comandos.txt
